<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FontForge</string>
    <string name="library">Library</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="preview">Preview</string>
    <string name="glyph_map">Glyph Map</string>
    <string name="metadata">Metadata</string>
    <string name="font_info">Font Info</string>
    <string name="edit_metadata">Edit Metadata</string>
    <string name="add_fonts">Add Fonts</string>
    <string name="search_fonts">Search fonts…</string>
    <string name="no_fonts">No fonts added yet.\nTap + to add fonts.</string>
    <string name="no_favorites">No favorites yet.\nStar a font to save it here.</string>
    <string name="tap_to_type">Tap here to type freely…</string>
    <string name="default_sample">The quick brown fox jumps over the lazy dog 0123456789</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="font_size">Size: %dpx</string>
    <string name="glyph_count">%,d glyphs</string>
    <string name="pref_glyph_show_all">Show All Unicode Glyphs</string>
    <string name="pref_glyph_show_all_summary">When off, shows only glyphs supported by the font</string>
    <string name="add_language">Add Language</string>
    <string name="language_name_hint">Language (e.g. Bengali)</string>
    <string name="sample_text_hint">Sample text for this language</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="non_destructive_note">* Edits are local. Original file is not modified.</string>
    <string name="yes">✓ Yes</string>
    <string name="no_str">✗ No</string>
    <string name="style_support">STYLE SUPPORT</string>
    <string name="technical">TECHNICAL</string>
    <string name="bold_support">Bold Support</string>
    <string name="italic_support">Italic Support</string>
    <string name="condensed_support">Condensed Support</string>
    <string name="extended_support">Extended Support</string>
    <string name="monospaced">Monospaced</string>
    <string name="num_glyphs">Glyphs</string>
    <string name="weight_class">Weight Class</string>
    <string name="units_per_em">Units per Em</string>
    <string name="italic_angle">Italic Angle</string>
    <string name="supported_chars">Supported Characters</string>
    <string name="font_tables">Tables</string>
    <string name="priority_metadata_first">Metadata first, then user text</string>
    <string name="priority_user_first">User text first, then metadata</string>
    <string name="priority_always_user">Always use user text</string>
    <string name="priority_always_meta">Always use metadata text</string>
    <string name="sample_priority_title">Sample Text Priority</string>
    <string name="default_lang_title">Default Preview Language</string>
    <string name="lang_samples_title">Language Sample Texts</string>
    <string name="glyph_settings_title">Glyph Keyboard</string>
</resources>
