<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/fontListFragment">

    <fragment
        android:id="@+id/fontListFragment"
        android:name="com.fontforge.ui.list.FontListFragment"
        android:label="@string/library">
        <action android:id="@+id/action_list_to_preview" app:destination="@id/previewFragment" />
    </fragment>

    <fragment
        android:id="@+id/favoritesFragment"
        android:name="com.fontforge.ui.list.FavoritesFragment"
        android:label="@string/favorites">
        <action android:id="@+id/action_fav_to_preview" app:destination="@id/previewFragment" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.fontforge.ui.settings.SettingsFragment"
        android:label="@string/settings" />

    <fragment
        android:id="@+id/previewFragment"
        android:name="com.fontforge.ui.preview.PreviewFragment"
        android:label="@string/preview">
        <argument android:name="fontId" app:argType="string" />
        <action android:id="@+id/action_preview_to_glyph" app:destination="@id/glyphFragment" />
        <action android:id="@+id/action_preview_to_meta" app:destination="@id/metaFragment" />
        <action android:id="@+id/action_preview_to_info" app:destination="@id/fontInfoFragment" />
    </fragment>

    <fragment
        android:id="@+id/glyphFragment"
        android:name="com.fontforge.ui.glyph.GlyphFragment"
        android:label="@string/glyph_map">
        <argument android:name="fontId" app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/metaFragment"
        android:name="com.fontforge.ui.meta.MetaFragment"
        android:label="@string/metadata">
        <argument android:name="fontId" app:argType="string" />
        <action android:id="@+id/action_meta_to_edit" app:destination="@id/metaEditFragment" />
    </fragment>

    <fragment
        android:id="@+id/metaEditFragment"
        android:name="com.fontforge.ui.meta.MetaEditFragment"
        android:label="@string/edit_metadata">
        <argument android:name="fontId" app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/fontInfoFragment"
        android:name="com.fontforge.ui.info.FontInfoFragment"
        android:label="@string/font_info">
        <argument android:name="fontId" app:argType="string" />
    </fragment>

</navigation>
